Pico Uzerine Duzenleme Yapildi

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Ferdi Simsek</title>
 </head>
 <body>
-    <nav>
+    <nav class="container">
         <ul>
           <li><strong>Ferdi</strong></li>
         </ul>
@@ -19,5 +19,13 @@
           <li><a href="#">Services</a></li>
           <li><a href="#">Products</a></li>
         </ul>
-      </nav></body>
+      </nav>
+    <article>
+        <header>
+            Not: PicoCSS Github Pages Yapisina Eklendi 
+        </header>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta aperiam, est enim, ex fugit ab sequi dolores repellat corrupti harum consectetur impedit expedita numquam nobis maiores quo at ut sapiente?</p>
+    </article>
+    
+    </body>
 </html>
